# web

./: Cargo.toml
migrations/: 20210824174942_user-table.down.sql  20210824174942_user-table.up.sql
src/: error.rs  index.rs  main.rs  util.rs
src/session/: auth.rs  login.rs  logout.rs  mod.rs  register.rs
static/: style.css
templates/: base.html.tera  index.html.tera  login.html.tera  navbar.html.tera  register.html.tera
