[package]
name = "web"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "786db9b", features = ["json", "secrets"] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "786db9b", features = ["sqlx_mysql"]}
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket", rev = "786db9b", features = ["tera"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "macros", "offline"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
